modificando insert absence